# QtRedisAssistant

./: .gitignore  BUILDING.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  README_WINDOWS.md  deploy_windows.sh  qt.conf
.github/workflows/: build.yml
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  redisconnection.cpp  redisconnection.h
